--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install black
+          pip install -r requirements.txt
       - name: Checking format with black
         run: |
           black --check --target-version py310 **/*.py
