--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mypy
+          pip install -r requirements.txt
       - name: Checking typing with mypy
         run: |
           mypy --show-traceback **/*.py
