--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -21,4 +21,4 @@ jobs:
           pip install -r requirements.txt
       - name: Checking typing with mypy
         run: |
-          mypy --show-traceback **/*.py
+          mypy --show-traceback code_rypl
