fiddle with packaging and add mypy config

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -20,5 +20,4 @@ jobs:
           pip install mypy
           pip install -r requirements.txt
       - name: Checking typing with mypy
-        run: |
-          mypy --show-traceback code_rypl
+        run: mypy -m code_rypl
