--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+        # TODO: try adding `cache: pip` on this line
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
