--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -4,7 +4,7 @@ name: auto-build
 
 on: 
   push:
-    branches: [ main, release-v*]
+    branches: [ main, release-v*, auto-build-* ]
 
 jobs:
   auto-build:
